Fix PDF export failing on non-UTF-8 text attachments
Files.readString(UTF_8) uses a strict decoder, so a single Latin-1 byte in a
.txt/.csv attachment threw MalformedInputException and failed the whole
document PDF export (regression introduced when E8 made appendToPdf real).
Decode leniently via new String(readAllBytes, UTF_8) — malformed bytes become
U+FFFD — in both generatePdf and extractContent.

Tests: TestTextPlainFormatHandler (RED-first on raw 0xE9 bytes, both surfaces).
Gates: docs-core 76/76 in worktree. Codex post-phase review: APPROVE.