@@ -47,7 +47,7 @@ public class TextPlainFormatHandler implements FormatHandler {
             PdfWriter.getInstance(output, pdfOutputStream);
 
             output.open();
-            String content = Files.readString(file, StandardCharsets.UTF_8);
+            String content = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
             Font font = FontFactory.getFont("LiberationMono-Regular");
             Paragraph paragraph = new Paragraph(content, font);
             paragraph.setAlignment(Element.ALIGN_LEFT);
@@ -60,7 +60,7 @@ public class TextPlainFormatHandler implements FormatHandler {
 
     @Override
     public String extractContent(String language, Path file) throws Exception {
-        return Files.readString(file, StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
     }
 
     @Override
